Data base link update

--- a/Medicine/.env
+++ b/Medicine/.env
@@ -1,2 +1,4 @@
 MONGO ='mongodb+srv://admin:admin1@cluster0.81pbs.mongodb.net/new?retryWrites=true&w=majority&appName=Cluster0'
 JWT_SECRET='shehan'
+# MONGO = 'mongodb+srv://admin:admin123@cluster.ugqok.mongodb.net/new?retryWrites=true&w=majority&appName=Cluster0'
+# JWT_SECRET='Nadun'
